--- a/Vente/WebContent/WEB-INF/web.xml
+++ b/Vente/WebContent/WEB-INF/web.xml
@@ -2,7 +2,7 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
   <servlet>
     <servlet-name>SaveBook</servlet-name>
-    <servlet-class>Servlet.SaveBook</servlet-class>
+    <servlet-class>servlet.SaveBook</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>SaveBook</servlet-name>
